# frogans-rs

./: .gitignore  Cargo.toml  dll.rs
crates/beat/: Cargo.toml
crates/beat/src/: channel.rs  combinator.rs  lib.rs  notify.rs  tests.rs  timer.rs
crates/fprt/: Cargo.toml
crates/fprt-core/: Cargo.toml
crates/fprt-core/src/: arena.rs  command.rs  error.rs  event.rs  lib.rs  nextwake.rs  pool.rs  start_info.rs  wire.rs
crates/fprt-exports/: Cargo.toml
crates/fprt-exports/src/: lib.rs  ui_exports.rs
crates/fprt-impl/: Cargo.toml
crates/fprt-impl/src/: lib.rs  runtime.rs
crates/fprt-proxy/: Cargo.toml
crates/fprt-proxy/src/: lib.rs
crates/fprt-server/: Cargo.toml
crates/fprt-server/src/: api.rs  command.rs  encoder.rs  engine.rs  event.rs  lib.rs  registry.rs  server.rs  session.rs
crates/fprt-server/tests/: demo.rs
crates/fprt-sys/: Cargo.toml
crates/fprt-sys/src/: ctx.rs  deployment_mode.rs  devtools_support.rs  exit_button_support.rs  image_format.rs  lib.rs  library_version.rs  nature.rs  reserved_flag.rs  start_information.rs  ustring.rs
crates/fprt-sys/tests/: layout.rs
crates/fprt/src/: arena.rs  call.rs  engine.rs  error.rs  foreign_pool.rs  host.rs  lib.rs  library.rs  pool.rs
crates/fprt/src/conductor/: config.rs  mod.rs
crates/fprt/src/conductor/command/: mod.rs
crates/fprt/src/conductor/component/: mod.rs  visual.rs
crates/fprt/src/conductor/component/application/: cmd_add_clipboard_image.rs  cmd_add_clipboard_text.rs  cmd_launch_way_out.rs  cmd_open_directory.rs  cmd_reinitialize_developers_directory.rs  cmd_stop.rs  cmd_update_directionality.rs  cmd_update_images.rs  cmd_update_layout.rs  cmd_update_zoom.rs  evt_change_layout.rs  evt_leaptofrogans.rs  evt_menu_access_unwanted.rs  evt_menu_access_wanted.rs  evt_quit.rs  evt_start.rs  evt_timeout.rs  mod.rs
crates/fprt/src/conductor/component/blocked/: cmd_update_addresses.rs  cmd_update_labels.rs  mod.rs
crates/fprt/src/conductor/component/devtools/: cmd_update_addresses.rs  cmd_update_labels.rs  mod.rs
crates/fprt/src/conductor/component/favorites/: cmd_update_addresses.rs  cmd_update_labels.rs  mod.rs
crates/fprt/src/conductor/component/inputfa/: cmd_update_address.rs  cmd_update_error_raise.rs  cmd_update_labels.rs  evt_change.rs  evt_ok.rs  mod.rs
crates/fprt/src/conductor/component/inspector/: cmd_update_address.rs  cmd_update_content_labels.rs  cmd_update_content_viewer.rs  cmd_update_labels.rs  cmd_update_status.rs  cmd_update_steps_labels.rs  cmd_update_sync.rs  evt_change_autosync.rs  evt_content_selected.rs  evt_step_selected.rs  mod.rs
crates/fprt/src/conductor/component/language/: cmd_update_labels.rs  cmd_update_list.rs  evt_ok.rs  mod.rs
crates/fprt/src/conductor/component/leaptofrogans/: cmd_update_address.rs  cmd_update_labels.rs  mod.rs
crates/fprt/src/conductor/component/legalinformation/: cmd_update_labels.rs  cmd_update_legal_content.rs  mod.rs
crates/fprt/src/conductor/component/menu/: cmd_update_layout.rs  cmd_update_visual.rs  evt_button_triggered.rs  mod.rs
crates/fprt/src/conductor/component/pad/: cmd_update_layout.rs  mod.rs
crates/fprt/src/conductor/component/recentlyvisited/: cmd_update_addresses.rs  cmd_update_labels.rs  mod.rs
crates/fprt/src/conductor/component/recovery/: cmd_update_addresses.rs  cmd_update_labels.rs  mod.rs
crates/fprt/src/conductor/component/sitehandler/: cmd_update_layout.rs  cmd_update_visual.rs  evt_button_triggered.rs  evt_force_close.rs  mod.rs
crates/fprt/src/conductor/component/update/: cmd_update_data.rs  cmd_update_labels.rs  mod.rs
crates/fprt/src/conductor/component/zoom/: cmd_update_labels.rs  evt_ok.rs  mod.rs
crates/fprt/src/conductor/report/: event.rs  mod.rs
crates/frogans-cli/: Cargo.toml
crates/frogans-cli/src/: main.rs  session.rs
crates/frogans-player-desktop/: Cargo.toml
crates/frogans-player-desktop/src/: main.rs
crates/frogans-surfaces/: Cargo.toml
crates/frogans-surfaces/src/: app.rs  gpu.rs  lib.rs  session.rs
crates/frogans-surfaces/src/surface/: mod.rs
crates/frogans-svg/: Cargo.toml
crates/manifap/: Cargo.toml  build.rs
crates/manifap/src/: address.rs  error.rs  facr.rs  ifap.rs  lib.rs  normalize.rs  tables.rs
crates/manifap/tables/facr/: facr10-adopted.spec.flt01-lc-latin-employable.txt  facr10-adopted.spec.flt02-lc-chinese-employable.txt  facr10-adopted.spec.flt03-lc-japanese-employable.txt  facr10-adopted.spec.flt04-lc-korean-employable.txt  facr10-adopted.spec.flt05-lc-arabic-employable.txt  facr10-adopted.spec.flt06-lc-cyrillic-employable.txt  facr10-adopted.spec.flt07-lc-hebrew-employable.txt  facr10-adopted.spec.flt08-lc-devanagari-employable.txt  facr10-adopted.spec.flt09-lc-thai-employable.txt  facr10-adopted.spec.flt10-lc-greek-employable.txt  facr10-adopted.spec.flt11-decimal-number-ranges.txt  facr10-adopted.spec.flt12-intra-lc-latin-confusable.txt  facr10-adopted.spec.flt13-intra-lc-chinese-confusable.txt  facr10-adopted.spec.flt14-intra-lc-chinese-variant.txt  facr10-adopted.spec.flt15-intra-lc-japanese-confusable.txt  facr10-adopted.spec.flt16-intra-lc-korean-confusable.txt  facr10-adopted.spec.flt17-intra-lc-arabic-confusable.txt  facr10-adopted.spec.flt18-intra-lc-cyrillic-confusable.txt  facr10-adopted.spec.flt19-intra-lc-hebrew-confusable.txt  facr10-adopted.spec.flt20-intra-lc-devanagari-confusable.txt  facr10-adopted.spec.flt21-intra-lc-thai-confusable.txt  facr10-adopted.spec.flt22-intra-lc-greek-confusable.txt  facr10-adopted.spec.flt23-inter-lc.txt
crates/manifap/tables/ifap/: ifap11-adopted.spec.ilt01-character-set.txt  ifap11-adopted.spec.ilt02-canonical-mapping.txt  ifap11-adopted.spec.ilt03-compatibility-mapping.txt  ifap11-adopted.spec.ilt04-combining-class.txt  ifap11-adopted.spec.ilt05-nfkc-stable.txt  ifap11-adopted.spec.ilt06-combining-marks.txt  ifap11-adopted.spec.ilt07-joining-type.txt  ifap11-adopted.spec.ilt08-eligible-characters.txt  ifap11-adopted.spec.ilt09-bidi-class.txt  ifap11-adopted.spec.ilt10-decimal-numbers.txt  ifap11-adopted.spec.ilt11-nfkc-case-folding.txt
crates/manifap/tests/: facr.rs  spec.rs
(+172 files in other folders)
